fix nav too wide

--- a/src/app/nav/nav.component.sass
+++ b/src/app/nav/nav.component.sass
@@ -31,6 +31,11 @@
     opacity: 1
     visibility: visible
 
+  .nav-wrapper
+    position: relative
+    margin: 0 auto
+    max-width: 768px
+
   ul
     position: absolute
     top: 5em
